--- a/230627W_Ace_Job_Agency/Pages/Register.cshtml
+++ b/230627W_Ace_Job_Agency/Pages/Register.cshtml
@@ -47,7 +47,7 @@
 
                 <div class="mb-3">
                     <label class="form-label" asp-for="RModel.Resume">Resume</label>
-                    <input type="file" asp-for="RModel.Resume" class="form-control" />
+                    <input type="file" asp-for="RModel.Resume" class="form-control" accept=".pdf, .docx" />
                     <span asp-validation-for="RModel.Resume" class="text-danger"></span>
                 </div>
 
