--- a/230627W_Ace_Job_Agency/Pages/Logout.cshtml
+++ b/230627W_Ace_Job_Agency/Pages/Logout.cshtml
@@ -2,7 +2,7 @@
 @model _230627W_Ace_Job_Agency.Pages.LogoutModel
 @{}
 
-<form method="post">
+<form method="post" asp-antiforgery="true">
 	<div class="container mt-5">
 		<div class="row justify-content-center">
 			<div class="col-sm-12 col-md-12 col-lg-4">
