--- a/230627W_Ace_Job_Agency/Pages/Login.cshtml
+++ b/230627W_Ace_Job_Agency/Pages/Login.cshtml
@@ -17,7 +17,7 @@
                 </div>
             }
 
-			<form method="post">
+			<form method="post" asp-antiforgery="true">
 				
 				<div class="mb-3">
 					<label class="form-label" asp-for="LModel.Email">Email Address</label>
