--- a/230627W_Ace_Job_Agency/Pages/Register.cshtml
+++ b/230627W_Ace_Job_Agency/Pages/Register.cshtml
@@ -7,7 +7,7 @@
         <div class="col-sm-12 col-md-12 col-lg-4">
             <h1 class="mb-3">Register</h1>
 
-            <form method="post" enctype="multipart/form-data">
+            <form method="post" enctype="multipart/form-data" asp-antiforgery="true">
                 <div asp-validation-summary="All" class="text-danger"></div>
 
                 <div class="mb-3">
