--- a/230627W_Ace_Job_Agency/Pages/Login.cshtml
+++ b/230627W_Ace_Job_Agency/Pages/Login.cshtml
@@ -21,14 +21,12 @@
 				
 				<div class="mb-3">
 					<label class="form-label" asp-for="LModel.Email">Email Address</label>
-					<input type="Text" asp-for="LModel.Email" class="form-control" />
-					<span asp-validation-for="LModel.Email" class="text-danger"></span>
+					<input type="Text" asp-for="LModel.Email" class="form-control" required />
 				</div>
 
 				<div class="mb-3">
 					<label class="form-label" asp-for="LModel.Password">Password</label>
-					<input type="password" asp-for="LModel.Password" class="form-control" />
-					<span asp-validation-for="LModel.Password" class="text-danger"></span>
+					<input type="password" asp-for="LModel.Password" class="form-control" required />
 				</div>
 
 				<div class="mb-3 form-check">
