--- a/230627W_Ace_Job_Agency/Pages/Index.cshtml
+++ b/230627W_Ace_Job_Agency/Pages/Index.cshtml
@@ -47,6 +47,10 @@
                         <dd class="col-sm-9">@HttpContext.Session.GetString("WhoAmI")</dd>
                     </dl>
                 </div>
+
+                <div class="text-center mb-4">
+                    <a class="btn btn-warning" href="/ChangePassword">Change Password</a>
+                </div>
             </div>
         </div>
     </div>
